updates to methods

--- a/Deterministic/Runs/5-Analysis-Partial/config.cfg
+++ b/Deterministic/Runs/5-Analysis-Partial/config.cfg
@@ -334,3 +334,92 @@ report_freq        = 1000
 [pub_c05_u460_old]:   Analysis<old, DNA, 0.05, 100, 0.4600, n, 1e-5, 100>
 [pub_c05_u480_old]:   Analysis<old, DNA, 0.05, 100, 0.4800, n, 1e-5, 100>
 [pub_c05_u500_old]:   Analysis<old, DNA, 0.05, 100, 0.5000, n, 1e-5, 100>
+
+
+// Cost 0.0005
+
+[pri_c0005_u0005_par]:  Analysis<par, RNA, 0.0005, 100, 0.0005, n, 1e-6, 100>
+[pri_c0005_u001_par]:   Analysis<par, RNA, 0.0005, 100, 0.0010, n, 1e-6, 100>
+[pri_c0005_u002_par]:   Analysis<par, RNA, 0.0005, 100, 0.0020, n, 1e-6, 100>
+[pri_c0005_u003_par]:   Analysis<par, RNA, 0.0005, 100, 0.0030, n, 1e-6, 100>
+[pri_c0005_u004_par]:   Analysis<par, RNA, 0.0005, 100, 0.0040, n, 1e-6, 100>
+[pri_c0005_u005_par]:   Analysis<par, RNA, 0.0005, 100, 0.0050, n, 1e-6, 100>
+
+[pri_c0005_u006_par]:   Analysis<par, RNA, 0.0005, 100, 0.0060, n, 1e-6, 100>
+[pri_c0005_u007_par]:   Analysis<par, RNA, 0.0005, 100, 0.0070, n, 1e-6, 100>
+[pri_c0005_u008_par]:   Analysis<par, RNA, 0.0005, 100, 0.0080, n, 1e-6, 100>
+[pri_c0005_u009_par]:   Analysis<par, RNA, 0.0005, 100, 0.0090, n, 1e-6, 100>
+[pri_c0005_u010_par]:   Analysis<par, RNA, 0.0005, 100, 0.0100, n, 1e-6, 100>
+
+[pri_c0005_u011_par]:   Analysis<par, RNA, 0.0005, 100, 0.0110, n, 1e-6, 100>
+[pri_c0005_u012_par]:   Analysis<par, RNA, 0.0005, 100, 0.0120, n, 1e-6, 100>
+[pri_c0005_u013_par]:   Analysis<par, RNA, 0.0005, 100, 0.0130, n, 1e-6, 100>
+[pri_c0005_u014_par]:   Analysis<par, RNA, 0.0005, 100, 0.0140, n, 1e-6, 100>
+[pri_c0005_u015_par]:   Analysis<par, RNA, 0.0005, 100, 0.0150, n, 1e-6, 100>
+
+[pri_c0005_u016_par]:   Analysis<par, RNA, 0.0005, 100, 0.0160, n, 1e-6, 100>
+[pri_c0005_u017_par]:   Analysis<par, RNA, 0.0005, 100, 0.0170, n, 1e-6, 100>
+[pri_c0005_u018_par]:   Analysis<par, RNA, 0.0005, 100, 0.0180, n, 1e-6, 100>
+[pri_c0005_u019_par]:   Analysis<par, RNA, 0.0005, 100, 0.0190, n, 1e-6, 100>
+[pri_c0005_u020_par]:   Analysis<par, RNA, 0.0005, 100, 0.0200, n, 1e-6, 100>
+
+
+[pub_c0005_u020_par]:   Analysis<par, DNA, 0.0005, 100, 0.0200, n, 1e-6, 100>
+
+
+
+// Cost 0.005
+[pri_c005_u010_par]:   Analysis<par, RNA, 0.005, 100, 0.0100, n, 1e-6, 100>
+[pri_c005_u020_par]:   Analysis<par, RNA, 0.005, 100, 0.0200, n, 1e-6, 100>
+[pri_c005_u030_par]:   Analysis<par, RNA, 0.005, 100, 0.0300, n, 1e-6, 100>
+[pri_c005_u040_par]:   Analysis<par, RNA, 0.005, 100, 0.0400, n, 1e-6, 100>
+[pri_c005_u050_par]:   Analysis<par, RNA, 0.005, 100, 0.0500, n, 1e-6, 100>
+
+[pri_c005_u060_par]:   Analysis<par, RNA, 0.005, 100, 0.0600, n, 1e-6, 100>
+[pri_c005_u070_par]:   Analysis<par, RNA, 0.005, 100, 0.0700, n, 1e-6, 100>
+[pri_c005_u080_par]:   Analysis<par, RNA, 0.005, 100, 0.0800, n, 1e-6, 100>
+[pri_c005_u090_par]:   Analysis<par, RNA, 0.005, 100, 0.0900, n, 1e-6, 100>
+[pri_c005_u100_par]:   Analysis<par, RNA, 0.005, 100, 0.1000, n, 1e-6, 100>
+
+[pri_c005_u110_par]:   Analysis<par, RNA, 0.005, 100, 0.1100, n, 1e-6, 100>
+[pri_c005_u120_par]:   Analysis<par, RNA, 0.005, 100, 0.1200, n, 1e-6, 100>
+[pri_c005_u130_par]:   Analysis<par, RNA, 0.005, 100, 0.1300, n, 1e-6, 100>
+[pri_c005_u140_par]:   Analysis<par, RNA, 0.005, 100, 0.1400, n, 1e-6, 100>
+[pri_c005_u150_par]:   Analysis<par, RNA, 0.005, 100, 0.1500, n, 1e-6, 100>
+
+[pri_c005_u160_par]:   Analysis<par, RNA, 0.005, 100, 0.1600, n, 1e-6, 100>
+[pri_c005_u170_par]:   Analysis<par, RNA, 0.005, 100, 0.1700, n, 1e-6, 100>
+[pri_c005_u180_par]:   Analysis<par, RNA, 0.005, 100, 0.1800, n, 1e-6, 100>
+[pri_c005_u190_par]:   Analysis<par, RNA, 0.005, 100, 0.1900, n, 1e-6, 100>
+[pri_c005_u200_par]:   Analysis<par, RNA, 0.005, 100, 0.2000, n, 1e-6, 100>
+
+
+[pub_c005_u200_par]:   Analysis<par, DNA, 0.005, 100, 0.2000, n, 1e-6, 100>
+
+
+
+
+// Cost 0.05
+[pri_c05_u100_par]:   Analysis<par, RNA, 0.05, 100, 0.1000, n, 1e-5, 100>
+[pri_c05_u120_par]:   Analysis<par, RNA, 0.05, 100, 0.1200, n, 1e-5, 100>
+[pri_c05_u140_par]:   Analysis<par, RNA, 0.05, 100, 0.1400, n, 1e-5, 100>
+[pri_c05_u160_par]:   Analysis<par, RNA, 0.05, 100, 0.1600, n, 1e-5, 100>
+[pri_c05_u180_par]:   Analysis<par, RNA, 0.05, 100, 0.1800, n, 1e-5, 100>
+[pri_c05_u200_par]:   Analysis<par, RNA, 0.05, 100, 0.2000, n, 1e-5, 100>
+[pri_c05_u220_par]:   Analysis<par, RNA, 0.05, 100, 0.2200, n, 1e-5, 100>
+[pri_c05_u240_par]:   Analysis<par, RNA, 0.05, 100, 0.2400, n, 1e-5, 100>
+[pri_c05_u260_par]:   Analysis<par, RNA, 0.05, 100, 0.2600, n, 1e-5, 100>
+[pri_c05_u280_par]:   Analysis<par, RNA, 0.05, 100, 0.2800, n, 1e-5, 100>
+[pri_c05_u300_par]:   Analysis<par, RNA, 0.05, 100, 0.3000, n, 1e-5, 100>
+[pri_c05_u320_par]:   Analysis<par, RNA, 0.05, 100, 0.3200, n, 1e-5, 100>
+[pri_c05_u340_par]:   Analysis<par, RNA, 0.05, 100, 0.3400, n, 1e-5, 100>
+[pri_c05_u360_par]:   Analysis<par, RNA, 0.05, 100, 0.3600, n, 1e-5, 100>
+[pri_c05_u380_par]:   Analysis<par, RNA, 0.05, 100, 0.3800, n, 1e-5, 100>
+[pri_c05_u400_par]:   Analysis<par, RNA, 0.05, 100, 0.4000, n, 1e-5, 100>
+[pri_c05_u420_par]:   Analysis<par, RNA, 0.05, 100, 0.4200, n, 1e-5, 100>
+[pri_c05_u440_par]:   Analysis<par, RNA, 0.05, 100, 0.4400, n, 1e-5, 100>
+[pri_c05_u460_par]:   Analysis<par, RNA, 0.05, 100, 0.4600, n, 1e-5, 100>
+[pri_c05_u480_par]:   Analysis<par, RNA, 0.05, 100, 0.4800, n, 1e-5, 100>
+[pri_c05_u500_par]:   Analysis<par, RNA, 0.05, 100, 0.5000, n, 1e-5, 100>
+
+[pub_c05_u500_par]:   Analysis<par, DNA, 0.05, 100, 0.5000, n, 1e-5, 100>
