--- a/TE/Runs/5-Parasite/config.cfg
+++ b/TE/Runs/5-Parasite/config.cfg
@@ -164,7 +164,7 @@ report_freq        = 50
 ParasiteCombined <PriLen, ParLen, ParPref, PriSpread, PriSpreadRel, MutRate,   eps, lam, rho,  H, s, t,  S,  c, k,  M, f>
 N                  = 5000
 generations        = 100000
-reps               = 10
+reps               = 1
 n_sites            = 100000
 ploidy             = 2
 haploid_N          = 2
@@ -195,7 +195,7 @@ s_mut_spread_relative = 0
 s_min              = 0
 s_max              = 1e300
 w                  = nh0,ng0,nh1,ng1,S,a0,a1 -> ( (1-<eps>*<PriLen>*<rho>/100)^(0.5*(nh0+ng0)*(nh0+ng0-1)) )*( (1-<eps>*<ParLen>*<rho>/100)^(0.5*(nh1+ng1)*(nh1+ng1-1)) )*( (1-<s>)^((ng0+ng1)/2) * (1-<H>*<s>)^(nh0+nh1) * (1-<s>*<t>)^((ng0+ng1)*((ng0+ng1)-2)/8) * (1-<H>*<s>*<t>)^((nh0+nh1)*(ng0+ng1)/2) * (1-<H>^2*<s>*<t>)^((nh0+nh1)*((nh0+nh1)-1)/2) )*(1 - <S>*<PriLen>*(nh0+ng0) - <S>*<ParLen>*(nh1+ng1) - <c>*<k>*(a0+a1) - <M>*(<f>*<k>*a0)^2 - <M>*(<f>*<k>*a1)^2)
-gen_coevolution    = 10000
+gen_coevolution    = 5000 // changing from 10000...
 invasions          = 5000,0.01,1,1 //when u was -1, parasites couldn't really duplicate very much at all when first introduced
 fileout            = ./Runs/5-Parasite/<$Name>.ngd
 report_freq        = 500
